--- a/WebApi/WebApi/Views/Home/Index.cshtml
+++ b/WebApi/WebApi/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>員工管理系統</title>
+    <title>員工API管理系統</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -194,7 +194,6 @@
         </div>
         <table class="table table-hover" id="tableShow">
         </table>
-
     </div>
 </body>
 </html>
